fix bug when open on mobile, contact + footer

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -18,15 +18,15 @@
     }
 
     #footer .social {
-        font-size: 40px;
+        font-size: 36px;
     }
 
     #footer .social a {
-        margin: 0 8px;
+        margin: 0 4px;
     }
 
     #footer .copyright {
-        font-size: 20px;
+        font-size: 18px;
     }
 
     #footer .copyright a {
